<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Pocket Fitness</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="place_finger_on_sensor_message">Place and hold your finger on the heart rate sensor</string>
    <string name="finger_on_sensor_message">Now monitoring heart rate</string>
    <string name="heart_rate_text">%1$d</string>
    <string name="bpm_label">bpm</string>
    <string name="sensor_no_sensor">Sensor of type %1$d does not exist</string>
    <string name="step_counter_steps_text">%1$d</string>
    <string name="login_email_edit_text_hint">Email Address</string>
    <string name="login_password_edit_text_hint">Password</string>
    <string name="login_forgot_password_button_text">Forgot Password?</string>
    <string name="login_sign_in_button_text">Sign In</string>
    <string name="login_sign_up_button_text">Not a member? Sign up!</string>
    <string name="login_title_text">Pocket fitness</string>
    <string name="register_email_edit_text_hint">Email Address</string>
    <string name="register_password_edit_text_hint">Password</string>
    <string name="register_confirm_password_edit_text_hint">Retype Password</string>
    <string name="register_sign_up_button_text">Sign up</string>
    <string name="register_sign_in_button_text">Already a member? Sign in!</string>
    <string name="register_title_text">Sign up to Pocket fitness</string>
    <string name="lost_password_title_text">Password Reset</string>
    <string name="lost_password_instructions_text">We just need your registered email address to send you password reset instructions and you will be on your way!</string>
    <string name="lost_password_email_edit_text_hint">Email Address</string>
    <string name="lost_password_reset_password_button_text">Reset Password</string>
    <string name="lost_password_sign_in_button_text">Back to Sign in</string>
    <string name="rewind_button">Rewind Button</string>
    <string name="play_button">Play Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="settings_account_button_text">Account Settings</string>
    <string name="current_password_edit_text_hint">Enter your current password</string>
    <string name="account_delete_account_button_text">Delete My Account</string>
    <string name="account_change_password_button_text">Change Password</string>
    <string name="account_verify_email_button_text">Verify Email Address</string>
    <string name="account_change_email_button_text">Change Email Address</string>
    <string name="delete_account_delete_button_text">Delete My Account</string>
    <string name="delete_account_header_text_view_text">We\'re sorry to hear you\'d like to delete your account.</string>
    <string name="change_email_header_text_view_text">We just need your new email address and current password to change your email address.</string>
    <string name="change_email_email_edit_text_hint">Enter your new email address</string>
    <string name="change_email_change_email_button_text">Change Email</string>
    <string name="change_password_header_text_view_text">We just need your current password and new password to change your password.</string>
    <string name="change_password_new_password_edit_text_hint">Enter your new password</string>
    <string name="change_password_change_password_button_text">Change Password</string>
    <string name="verify_email_send_email_button_text">Send Instructions</string>
    <string name="verify_email_header_text_view_text">We will send instructions to your registered email address.</string>
    <string name="account_settings_verified_email">Your email address is verified</string>
    <string name="account_settings_not_verified_email">Your email address is not verified</string>
    <string name="profile_followers_count_temp_value_text_view_text">99</string>
    <string name="profile_following_count_temp_value_text_view_text">99</string>
    <string name="profile_bio_temp_value_text_view_text">Wubba lubba dub dub friends!</string>
    <string name="profile_edit_profile_button_text">Edit Profile</string>
    <string name="profile_basic_info_header_text_view_text">Basic Info</string>
    <string name="setup_profile_add_photo_button_text">Add Photo</string>
    <string name="setup_profile_first_name_edit_text_hint">Enter first name</string>
    <string name="setup_profile_last_name_edit_text_hint">Enter last name</string>
    <string name="setup_profile_next_setup_button_text">Next</string>
    <string name="setup_profile_header_text_view_text">To get started we just need to setup your profile page please enter your name and add an optional profile picture.</string>
    <string name="setup_profile_title_text_view_text">Welcome to Pocket fitness!</string>
    <string name="edit_profile_first_name_header_text_view">First name</string>
    <string name="edit_profile_last_name_header_text_view">Last name</string>
    <string name="edit_profile_bio_header_text_view">Bio</string>
    <string name="edit_profile_save_changes_button_text">Save changes</string>
    <string name="edit_profile_cover_photo_button_text">Edit Cover Photo</string>
    <string name="open_camera_button">open camera</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="search_food_header_text_view">Search nutrition and diet data</string>
    <string name="search_food_search_edit_text_hint">e.g. sausage, cheese, egg</string>
    <string name="search_food_search_button_text">Search</string>
    <string name="search_food_row_category_header_text_view_text">Category</string>
    <string name="search_food_row_label_header_text_view">Name</string>
    <string name="home_steps_label_text">steps</string>
    <string name="home_steps_distance_label_text">km</string>
    <string name="feed_more_option_remove_active">Remove Post</string>
    <string name="feed_post_like_button_text">Like</string>
    <string name="feed_post_comment_button_text">Comment</string>
    <string name="feed_post_share_button_text">Share</string>
    <string name="feed_post_like_header_text_view_text">people liked this post</string>
    <string name="health_stats_setup_finish">Finish Setup</string>
    <string name="health_stats_setup_heading">Accurately tracking your health requires some stats.</string>
    <string name="health_stats_setup_subheading">These are optional and will not be displayed on your profile.</string>
    <string name="health_stats_setup_height_label">What is your height?</string>
    <string name="health_stats_setup_weight_label">What is your weight?</string>
    <string name="health_stats_height_check_text">Record my height</string>
    <string name="health_stats_weight_check_text">Record my weight</string>
    <string name="health_stats_age_label">How old are you?</string>
    <string name="health_stats_sex_label">What is your sex?</string>
    <string name="home_heart_measure_label">Tap to measure</string>
    <string name="home_heart_rate_label">Heart Rate</string>
    <string name="login_title_text_view_text">Pocket Fitness</string>
    <string name="login_edit_text_email_hint">Email Address</string>
    <string name="login_default_sign_in_button_text">Sign in</string>
    <string name="login_google_sign_in_button_text">Sign in with Google+</string>
    <string name="login_sign_up_text_view_text">Don\'t have an account? Register</string>
    <string name="login_sign_up_2_text_view_text">Register</string>
    <string name="login_check_box_text">Disable background</string>
    <string name="search_recipe_search_hint">Search for a recipe</string>
    <string name="search_recipe_filter_search_button_text">Filter search</string>
    <string name="refine_search_allergies_text_view_text">Allergies</string>
    <string name="refine_search_calories_from_text_view_text">From</string>
    <string name="refine_search_calories_to_text_view_text">To</string>
    <string name="refine_search_calories_text_view_text">Calories</string>
    <string name="refine_search_done_button_text">Done</string>
    <string name="refine_search_diet_text_view_text">Diet</string>
    <string name="refine_search_diet_balanced_check_box_text">Balanced</string>
    <string name="refine_search_diet_high_fiber_check_box_text">High Fiber</string>
    <string name="refine_search_diet_high_protein_check_box_text">High Protein</string>
    <string name="refine_search_diet_low_carb_check_box_text">Low Carb</string>
    <string name="refine_search_diet_low_fat_check_box_text">Low Fat</string>
    <string name="refine_search_diet_low_sodium_check_box_text">Low Sodium</string>
    <string name="refine_search_health_gluten_free_check_box_text">Gluten</string>
    <string name="refine_search_health_fish_free_check_box_text">Fish</string>
    <string name="refine_search_health_eggs_free_check_box_text">Eggs</string>
    <string name="refine_search_health_dairy_free_check_box_text">Dairy</string>
    <string name="refine_search_health_peanuts_free_check_box_text">Peanuts</string>
    <string name="refine_search_health_soy_free_check_box_text">Soy</string>
    <string name="refine_search_health_vegetarian_check_box_text">Vegetarian</string>
    <string name="refine_search_health_vegan_check_box_text">Vegan</string>
    <string name="refine_search_health_paleo_check_box_text">Paleo</string>
    <string name="refine_search_health_alcohol_free_check_box_text">Alcohol-Free</string>
    <string name="refine_search_health_kosher_check_box_text">Kosher</string>
    <string name="navbar_item_search_recipe_text">Search Recipes</string>
    <string name="navbar_item_search_food_text">Search Food</string>
    <string name="navbar_item_30_day_diet_text">Diet Plans</string>
    <string name="navbar_item_posts_text">Posts</string>
    <string name="navbar_item_home_text">Home</string>
    <string name="navbar_item_settings_text">Settings</string>
    <string name="navbar_item_log_out_text">Log Out</string>
    <string name="navbar_item_communicate_text">Communicate</string>
    <string name="navbar_item_body_building_text">Bodybuilding Workouts</string>
    <string name="navbar_item_news_articles_text">News Articles</string>
    <string name="navbar_item_workout_videos_text">Workout videos</string>
    <string name="recipe_row_calories_text_view_text">calories placeholder</string>
    <string name="recipe_row_source_text_view_text">source placeholder</string>
    <string name="recipe_row_name_text_view_text">name placeholder</string>
    <string name="feed_more_options_menu_report_option_text">Report post</string>
    <string name="news_api_key">f2d903eb3c814a7aa90b22c8f480d14f</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA7E0Z77NDwUTFXhl9trUE7s9XhGWXuZjk</string>
    <string name="google_places_key">"AIzaSyBWGQQuG0IGIcdnBjr1DdcM_23LeFTXOSc"</string>
    <string name="title_activity_user_post_location">Map</string>
    <string name="view_profile_follow_button_text">Follow</string>
    <string name="delete_account_info_text_view_text">- Your profile pictures, cover photos and images from our storage.\n- All stored information associated with your account.\n- All posts made by your account.\n- Your account from all users followers and following colletions.</string>
    <string name="delete_account_title_text_view_text">By deleting your account permanentely you will delete:</string>
    <string name="delete_account_warning_text_view_text">Deletion of your accout is final you will not be able to recover your deleted account or data.\n </string>
    <string name="recipe_item_diet_label_header_text_view_text">Diet Labels</string>
</resources>