<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.tees.cupcake.recipes.SearchRecipesActivity">

    <EditText
        android:id="@+id/search_recipe_edit_text"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/search_bar_edit_text_background"
        android:ems="10"
        android:hint="@string/search_recipe_search_hint"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textCursorDrawable="@drawable/black_cursor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_recipe_search_button"
        android:layout_width="52dp"
        android:layout_height="52dp"

        android:background="@drawable/circle_button"
        android:onClick="buildString"
        app:layout_constraintBottom_toBottomOf="@+id/search_recipe_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/search_recipe_edit_text"
        app:layout_constraintTop_toTopOf="@+id/search_recipe_edit_text"
        app:srcCompat="@drawable/ic_search_icon_white" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/refine_search_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_recipe_filter_search_button">

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.72" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.38"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.023364486"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/refine_search_diet_text_view"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/refine_search_diet_text_view_text"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_calories_to_edit_text" />

        <CheckBox
            android:id="@+id/refine_search_diet_balanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_diet_balanced_check_box_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/refine_search_health_vegan"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <CheckBox
            android:id="@+id/refine_search_diet_high-fiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_diet_high_fiber_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_diet_balanced" />

        <CheckBox
            android:id="@+id/refine_search_diet_high-protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_diet_high_protein_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_diet_high-fiber" />

        <CheckBox
            android:id="@+id/refine_search_diet_low-carb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_diet_low_carb_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_diet_high-protein" />

        <CheckBox
            android:id="@+id/refine_search_diet_low-fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_diet_low_fat_check_box_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/refine_search_health_gluten-free"
            app:layout_constraintStart_toStartOf="@+id/guideline5" />

        <CheckBox
            android:id="@+id/refine_search_diet_low-sodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_diet_low_sodium_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_diet_low-fat" />

        <TextView
            android:id="@+id/refine_search_allergies_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/refine_search_allergies_text_view_text"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/refine_search_calories_text_view"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <CheckBox
            android:id="@+id/refine_search_health_gluten-free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_gluten_free_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_allergies_text_view" />

        <CheckBox
            android:id="@+id/refine_search_health_fish-free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_fish_free_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_gluten-free" />

        <CheckBox
            android:id="@+id/refine_search_health_egg-free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_eggs_free_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_fish-free" />

        <CheckBox
            android:id="@+id/refine_search_health_dairy-free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_dairy_free_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_egg-free" />

        <CheckBox
            android:id="@+id/refine_search_health_peanut-free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_peanuts_free_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_dairy-free" />

        <CheckBox
            android:id="@+id/refine_search_health_soy-free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_soy_free_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_peanut-free" />

        <CheckBox
            android:id="@+id/refine_search_health_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_vegetarian_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_diet_low-sodium" />

        <CheckBox
            android:id="@+id/refine_search_health_vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_vegan_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_vegetarian" />

        <CheckBox
            android:id="@+id/refine_search_health_paleo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_paleo_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_vegan" />

        <TextView
            android:id="@+id/refine_search_calories_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/refine_search_calories_text_view_text"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/refine_search_health_alcohol-free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_alcohol_free_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_paleo" />

        <CheckBox
            android:id="@+id/refine_search_health_kosher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onCheckBoxClicked"
            android:text="@string/refine_search_health_kosher_check_box_text"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_health_alcohol-free" />

        <TextView
            android:id="@+id/refine_search_calories_from_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/refine_search_calories_from_text_view_text"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_calories_text_view" />

        <TextView
            android:id="@+id/refine_search_calories_to_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/refine_search_calories_to_text_view_text"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/refine_search_calories_from_edit_text" />

        <EditText
            android:id="@+id/refine_search_calories_from_edit_text"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/refine_search_edit_text_background"
            android:ems="10"
            android:paddingLeft="2dp"
            android:inputType="number"
            android:textCursorDrawable="@drawable/black_cursor"
            app:layout_constraintBaseline_toBaselineOf="@+id/refine_search_calories_from_text_view"
            app:layout_constraintStart_toEndOf="@+id/refine_search_calories_from_text_view" />

        <EditText
            android:id="@+id/refine_search_calories_to_edit_text"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/refine_search_edit_text_background"
            android:ems="10"
            android:paddingLeft="2dp"
            android:inputType="number"
            android:textCursorDrawable="@drawable/black_cursor"
            app:layout_constraintBaseline_toBaselineOf="@+id/refine_search_calories_to_text_view"
            app:layout_constraintEnd_toEndOf="@+id/refine_search_calories_from_edit_text" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/search_recipe_filter_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="filterSearchOnClick"
        android:text="@string/search_recipe_filter_search_button_text"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/search_recipe_search_button"
        app:layout_constraintTop_toBottomOf="@+id/search_recipe_edit_text" />

</android.support.constraint.ConstraintLayout>
